# wgmanager

./: .env  .gitignore  CMakeLists.txt  README.md  release
deb/: postinst
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx  setupProxy.js
frontend/src/@imolla/hooks/: index.ts
frontend/src/@imolla/layout/: AppLayout.tsx  Public.tsx  sizes.ts
frontend/src/@imolla/services/: index.ts  network.ts
frontend/src/@imolla/types/: index.ts  theme.ts
frontend/src/@spazfeed/components/: index.ts
frontend/src/@spazfeed/layout/: AppLayout.tsx  index.tsx  theme.ts
frontend/src/@spazfeed/services/: helpers.ts
frontend/src/assets/: style.scss
frontend/src/pages/: LeftSidebar.tsx  Router.tsx
frontend/src/pages/Authentication/: Login.tsx
frontend/src/pages/Errors/: Page404.tsx
frontend/src/pages/clients/: EditClient.tsx  Modal.tsx  New.tsx  index.tsx
frontend/src/pages/dashboard/: index.tsx
frontend/src/pages/settings/: index.tsx
frontend/src/pages/users/: EditUser.tsx  New.tsx  UserModal.tsx  index.tsx
product/: wgmanager_0.0.1-1_amd64.deb
product/wgmanager_0.0.1-1_amd64/DEBIAN/: control  preinst
src/: main.cpp  routes.hpp
src/app/: cli.hpp  config.hpp  database.hpp  jwt.hpp  migrations.hpp  model.hpp  packages.hpp  utils.hpp
src/controllers/: AuthorizationController.hpp  ClientController.hpp  GeneralController.hpp  UserController.hpp
src/middleweares/: Authorization.hpp
src/models/: Client.hpp  IpAddress.hpp  Option.hpp  RefreshToken.hpp  Role.hpp  SessionToken.hpp  User.hpp
(+44 files in other folders)
